--- a/_data/tags.yml
+++ b/_data/tags.yml
@@ -14,6 +14,105 @@ allowed-tags:
   - troubleshooting
   - azure
   - developers
-  - devops
   - powershell
-  - datalake
+  - active_directory
+  - advisor
+  - aks
+  - analysis_services
+  - ansible
+  - api_management
+  - app_service
+  - application_gateway
+  - automation
+  - availability_zones
+  - azure_cache_for_redis
+  - azure_databricks
+  - azure_functions
+  - azure_maps
+  - azure_monitor
+  - azure_portal
+  - azure_resource_manager
+  - azure_signalr
+  - azure_supportability
+  - backup
+  - bastion
+  - batch
+  - billing
+  - blockchain
+  - cdn
+  - cli
+  - cloud_services
+  - cloud_shell
+  - containers
+  - cosmos_db
+  - cost_management
+  - data_catalog
+  - data_explorer
+  - data_factory
+  - data_lake_analytics
+  - data_lake_store
+  - data_share
+  - databox
+  - dedicated_hsm
+  - devops
+  - digital_twins
+  - dms
+  - dns
+  - docker
+  - event_grid
+  - event_hubs
+  - expressroute
+  - firewall
+  - frontdoor
+  - genomics
+  - governance
+  - guides
+  - hdinsight
+  - integrations
+  - iot
+  - iot_hub
+  - key_vault
+  - lighthouse
+  - load_balancer
+  - logic_apps
+  - machine_learning
+  - managed_applications
+  - marketplace
+  - media
+  - migrate
+  - network_watcher
+  - networking
+  - notebooks
+  - notification_hubs
+  - open_datasets
+  - power_bi
+  - role_based_access_control
+  - scheduler
+  - sdks
+  - search
+  - security
+  - security_center
+  - sentinel
+  - service_bus
+  - service_fabric
+  - service_health
+  - site_recovery
+  - spatial_anchors
+  - sql_data_warehouse
+  - sql_database
+  - sql_database_mariadb
+  - sql_database_mysql
+  - sql_database_postgresql
+  - sql_server_stretch_database
+  - storage
+  - storsimple
+  - stream_analytics
+  - terraform
+  - time_series_insights
+  - traffic_manager
+  - virtual_desktop
+  - virtual_machines
+  - virtual_network
+  - virtual_wan
+  - visual_studio
+  - vpn_gateway
