--- a/_data/terms.yml
+++ b/_data/terms.yml
@@ -1,1 +1,101 @@
-apple: "apple - the fruit of a disiduous tree."
+active directory: "Lorem ipsum dolor sit amet, consectetur adipiscing elit."
+advisor: "Lorem ipsum dolor sit amet, consectetur adipiscing elit."
+aks: "Lorem ipsum dolor sit amet, consectetur adipiscing elit."
+analysis services: "Lorem ipsum dolor sit amet, consectetur adipiscing elit."
+ansible: "Lorem ipsum dolor sit amet, consectetur adipiscing elit."
+api management: "Lorem ipsum dolor sit amet, consectetur adipiscing elit."
+app service: "Lorem ipsum dolor sit amet, consectetur adipiscing elit."
+application gateway: "Lorem ipsum dolor sit amet, consectetur adipiscing elit."
+automation: "Lorem ipsum dolor sit amet, consectetur adipiscing elit."
+availability zones: "Lorem ipsum dolor sit amet, consectetur adipiscing elit."
+azure cache for redis: "Lorem ipsum dolor sit amet, consectetur adipiscing elit."
+azure databricks: "Lorem ipsum dolor sit amet, consectetur adipiscing elit."
+azure functions: "Lorem ipsum dolor sit amet, consectetur adipiscing elit."
+azure maps: "Lorem ipsum dolor sit amet, consectetur adipiscing elit."
+azure monitor: "Lorem ipsum dolor sit amet, consectetur adipiscing elit."
+azure portal: "Lorem ipsum dolor sit amet, consectetur adipiscing elit."
+azure resource manager: "Lorem ipsum dolor sit amet, consectetur adipiscing elit."
+azure signalr: "Lorem ipsum dolor sit amet, consectetur adipiscing elit."
+azure supportability: "Lorem ipsum dolor sit amet, consectetur adipiscing elit."
+backup: "Lorem ipsum dolor sit amet, consectetur adipiscing elit."
+bastion: "Lorem ipsum dolor sit amet, consectetur adipiscing elit."
+batch: "Lorem ipsum dolor sit amet, consectetur adipiscing elit."
+billing: "Lorem ipsum dolor sit amet, consectetur adipiscing elit."
+blockchain: "Lorem ipsum dolor sit amet, consectetur adipiscing elit."
+cdn: "Lorem ipsum dolor sit amet, consectetur adipiscing elit."
+cli: "Lorem ipsum dolor sit amet, consectetur adipiscing elit."
+cloud services: "Lorem ipsum dolor sit amet, consectetur adipiscing elit."
+cloud shell: "Lorem ipsum dolor sit amet, consectetur adipiscing elit."
+containers: "Lorem ipsum dolor sit amet, consectetur adipiscing elit."
+cosmos db: "Lorem ipsum dolor sit amet, consectetur adipiscing elit."
+cost management: "Lorem ipsum dolor sit amet, consectetur adipiscing elit."
+data catalog: "Lorem ipsum dolor sit amet, consectetur adipiscing elit."
+data explorer: "Lorem ipsum dolor sit amet, consectetur adipiscing elit."
+data factory: "Lorem ipsum dolor sit amet, consectetur adipiscing elit."
+data lake analytics: "Lorem ipsum dolor sit amet, consectetur adipiscing elit."
+data lake store: "Lorem ipsum dolor sit amet, consectetur adipiscing elit."
+data share: "Lorem ipsum dolor sit amet, consectetur adipiscing elit."
+databox: "Lorem ipsum dolor sit amet, consectetur adipiscing elit."
+dedicated hsm: "Lorem ipsum dolor sit amet, consectetur adipiscing elit."
+devops: "Lorem ipsum dolor sit amet, consectetur adipiscing elit."
+digital twins: "Lorem ipsum dolor sit amet, consectetur adipiscing elit."
+dms: "Lorem ipsum dolor sit amet, consectetur adipiscing elit."
+dns: "Lorem ipsum dolor sit amet, consectetur adipiscing elit."
+docker: "Lorem ipsum dolor sit amet, consectetur adipiscing elit."
+event grid: "Lorem ipsum dolor sit amet, consectetur adipiscing elit."
+event hubs: "Lorem ipsum dolor sit amet, consectetur adipiscing elit."
+expressroute: "Lorem ipsum dolor sit amet, consectetur adipiscing elit."
+firewall: "Lorem ipsum dolor sit amet, consectetur adipiscing elit."
+frontdoor: "Lorem ipsum dolor sit amet, consectetur adipiscing elit."
+genomics: "Lorem ipsum dolor sit amet, consectetur adipiscing elit."
+governance: "Lorem ipsum dolor sit amet, consectetur adipiscing elit."
+guides: "Lorem ipsum dolor sit amet, consectetur adipiscing elit."
+hdinsight: "Lorem ipsum dolor sit amet, consectetur adipiscing elit."
+integrations: "Lorem ipsum dolor sit amet, consectetur adipiscing elit."
+iot: "Lorem ipsum dolor sit amet, consectetur adipiscing elit."
+iot hub: "Lorem ipsum dolor sit amet, consectetur adipiscing elit."
+key vault: "Lorem ipsum dolor sit amet, consectetur adipiscing elit."
+lighthouse: "Lorem ipsum dolor sit amet, consectetur adipiscing elit."
+load balancer: "Lorem ipsum dolor sit amet, consectetur adipiscing elit."
+logic apps: "Lorem ipsum dolor sit amet, consectetur adipiscing elit."
+machine learning: "Lorem ipsum dolor sit amet, consectetur adipiscing elit."
+managed applications: "Lorem ipsum dolor sit amet, consectetur adipiscing elit."
+marketplace: "Lorem ipsum dolor sit amet, consectetur adipiscing elit."
+media: "Lorem ipsum dolor sit amet, consectetur adipiscing elit."
+migrate: "Lorem ipsum dolor sit amet, consectetur adipiscing elit."
+network watcher: "Lorem ipsum dolor sit amet, consectetur adipiscing elit."
+networking: "Lorem ipsum dolor sit amet, consectetur adipiscing elit."
+notebooks: "Lorem ipsum dolor sit amet, consectetur adipiscing elit."
+notification hubs: "Lorem ipsum dolor sit amet, consectetur adipiscing elit."
+open datasets: "Lorem ipsum dolor sit amet, consectetur adipiscing elit."
+power bi: "Lorem ipsum dolor sit amet, consectetur adipiscing elit."
+role based access control: "Lorem ipsum dolor sit amet, consectetur adipiscing elit."
+scheduler: "Lorem ipsum dolor sit amet, consectetur adipiscing elit."
+sdks: "Lorem ipsum dolor sit amet, consectetur adipiscing elit."
+search: "Lorem ipsum dolor sit amet, consectetur adipiscing elit."
+security: "Lorem ipsum dolor sit amet, consectetur adipiscing elit."
+security center: "Lorem ipsum dolor sit amet, consectetur adipiscing elit."
+sentinel: "Lorem ipsum dolor sit amet, consectetur adipiscing elit."
+service bus: "Lorem ipsum dolor sit amet, consectetur adipiscing elit."
+service fabric: "Lorem ipsum dolor sit amet, consectetur adipiscing elit."
+service health: "Lorem ipsum dolor sit amet, consectetur adipiscing elit."
+site recovery: "Lorem ipsum dolor sit amet, consectetur adipiscing elit."
+spatial anchors: "Lorem ipsum dolor sit amet, consectetur adipiscing elit."
+sql data warehouse: "Lorem ipsum dolor sit amet, consectetur adipiscing elit."
+sql database: "Lorem ipsum dolor sit amet, consectetur adipiscing elit."
+sql database mariadb: "Lorem ipsum dolor sit amet, consectetur adipiscing elit."
+sql database mysql: "Lorem ipsum dolor sit amet, consectetur adipiscing elit."
+sql database postgresql: "Lorem ipsum dolor sit amet, consectetur adipiscing elit."
+sql server stretch database: "Lorem ipsum dolor sit amet, consectetur adipiscing elit."
+storage: "Lorem ipsum dolor sit amet, consectetur adipiscing elit."
+storsimple: "Lorem ipsum dolor sit amet, consectetur adipiscing elit."
+stream analytics: "Lorem ipsum dolor sit amet, consectetur adipiscing elit."
+terraform: "Lorem ipsum dolor sit amet, consectetur adipiscing elit."
+time series insights: "Lorem ipsum dolor sit amet, consectetur adipiscing elit."
+traffic manager: "Lorem ipsum dolor sit amet, consectetur adipiscing elit."
+virtual desktop: "Lorem ipsum dolor sit amet, consectetur adipiscing elit."
+virtual machines: "Lorem ipsum dolor sit amet, consectetur adipiscing elit."
+virtual network: "Lorem ipsum dolor sit amet, consectetur adipiscing elit."
+virtual wan: "Lorem ipsum dolor sit amet, consectetur adipiscing elit."
+visual studio: "Lorem ipsum dolor sit amet, consectetur adipiscing elit."
+vpn gateway: "Lorem ipsum dolor sit amet, consectetur adipiscing elit."
