--- a/_data/topnav.yml
+++ b/_data/topnav.yml
@@ -6,27 +6,37 @@ topnav:
     - title: GitHub
       external_url: https://github.com/PatrickGallucci/patrick.gallucci.us
     - title: Blog
-      url: /news
+      url: /blog
 
 #Topnav dropdowns
 topnav_dropdowns:
 - title: Topnav dropdowns
   folders:
-    - title: Jekyll Help
+    - title: Docs
       folderitems:
-        - title: Jekyll Talk
-          external_url: https://talk.jekyllrb.com
-        - title: Jekyll documentation
-          external_url: http://jekyllrb.com/docs/home/
-        - title: Jekyll on Stack Overflow
-          external_url: http://stackoverflow.com/questions/tagged/jekyll
-        - title: Jekyll on my blog
-          external_url: http://idratherbewriting.com/category-jekyll/
-    - title: Products
+        - title: SQL Server
+          external_url: https://docs.microsoft.com/en-us/sql/?view=sql-server-2017
+        - title: Azure
+          external_url: https://docs.microsoft.com/en-us/azure/
+        - title: Visual Studio
+          external_url: https://docs.microsoft.com/en-us/visualstudio/products/?view=vs-2019
+        - title: Azure DevOps
+          external_url: https://docs.microsoft.com/en-us/azure/devops/
+        - title: PowerShell
+          external_url: https://docs.microsoft.com/en-us/powershell/
+        - title: Office
+          external_url: https://docs.microsoft.com/en-us/office/
+        - title: Microsoft  365
+          external_url: https://docs.microsoft.com/en-us/microsoft-365/
+        - title: Office  365
+          external_url: https://docs.microsoft.com/en-us/office365/
+        - title: .Net
+          external_url: https://docs.microsoft.com/en-us/dotnet/
+    - title: Site
       folderitems:
-        - title: Jekyll Documentation Theme
+        - title: Presentations
           url: /mydoc_introduction.html
-        - title: Product 1
+        - title: Asset Library
           url: /p1_landing_page.html
-        - title: Product 2
+        - title: Playbooks
           url: /p2_landing_page.html
