--- a/_data/sidebars/assets_sidebar.yml
+++ b/_data/sidebars/assets_sidebar.yml
@@ -3,7 +3,7 @@
 
 entries:
 - title: Sidebar
-  product: Product1
+  product: Assets
   version: 1.0
   folders:
 
@@ -23,20 +23,12 @@ entries:
   - title: Getting Started
     output: web, pdf
     folderitems:
-    - title: Product 1 home
-      url: /p1_landing_page.html
+    - title: Assets home
+      url: /assets_landing_page.html
       output: web
 
     - title: Sample 1
-      url: /p1_sample1.html
-      output: web, pdf
-
-    - title: Sample 2
-      url: /p1_sample2.html
-      output: web, pdf
-
-    - title: Sample 3
-      url: /p1_sample3.html
+      url: /assets_sample1.html
       output: web, pdf
 
   - title: Another heading
