--- a/_data/sidebars/playbooks_sidebar.yml
+++ b/_data/sidebars/playbooks_sidebar.yml
@@ -1,8 +1,8 @@
 # This is your sidebar TOC. The sidebar code loops through sections here and provides the appropriate formatting.
 
 entries:
-- title: Product2
-  product: Product2
+- title: Playbooks
+  product: Playbooks
   version: 1.0
   folders:
 
