--- a/pdfconfigs/config_mydoc_pdf.yml
+++ b/pdfconfigs/config_mydoc_pdf.yml
@@ -4,8 +4,8 @@ baseurl: "/mydoc-pdf"
 port: 4010
 output: pdf
 product: mydoc
-print_title: Jekyll theme for documentation — mydoc product
-print_subtitle: version 6.0
+print_title: Patrick Gallucci Technotes
+print_subtitle: version 1.0
 output: pdf
 defaults:
   -
