--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@ site_title: patrick.gallucci.us
 company_name: Gallucci.US
 # this appears in the footer
 
-github_editme_path: PatrickGallucci/patrick.gallucci.us
+github_editme_path: 
 # if you're using Github, provide the basepath to the branch you've created for reviews, following the sample here. if not, leave this value blank.
 
 # gitlab_editme_path: tomjoht/documentation-theme-jekyll/blob/gh-pages/
