--- a/_config.yml
+++ b/_config.yml
@@ -15,13 +15,13 @@ site_title: patrick.gallucci.us
 company_name: Gallucci.US
 # this appears in the footer
 
-github_editme_path: 
+github_editme_path:
 # if you're using Github, provide the basepath to the branch you've created for reviews, following the sample here. if not, leave this value blank.
 
 # gitlab_editme_path: tomjoht/documentation-theme-jekyll/blob/gh-pages/
 # if you're using GitLab, provide the basepath to the branch you've created for reviews, following the sample here. if not, leave this value blank.
 
-disqus_shortname: patrickgallucci
+disqus_shortname: 
 # if you're using disqus for comments, add the shortname here. if not, leave this value blank.
 
 google_analytics: UA-102630412-1
